isomd5sum (1:1.0.4-1ubuntu1) jaunty; urgency=low
  * Python 2.6 transition:
    - Include /usr/share/python/python.mk.
    - Use call py_sitename_sh macro to install all python stuffs correctly.

 -- Alessio Treglia <quadrispro@ubuntu.com>  Fri, 13 Mar 2009 06:19:55 +0100

--- a/control
+++ b/control
@@ -1,7 +1,8 @@
 Source: isomd5sum
 Section: misc
 Priority: optional
-Maintainer: Ryan Finnie <ryan@finnie.org>
+Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
+XSBC-Original-Maintainer: Ryan Finnie <ryan@finnie.org>
 Build-Depends: debhelper (>= 5.0.37.2), libpopt-dev, python-all-dev (>= 2.3.5-11), python-central
 Standards-Version: 3.7.3
 Homepage: http://fedorahosted.org/releases/i/s/isomd5sum
