isomd5sum (1:1.0.7+git.20110618.6c9cd2f-1) unstable; urgency=low
  * New upstream version (upstream does not currently reliably publish 
    tarball releases; git used instead)

 -- Ryan Finnie <ryan@finnie.org>  Sat, 18 Jun 2011 14:16:50 -0700

isomd5sum (1:1.0.5-2) unstable; urgency=low

  * Bumped standards to 3.9.2
  * Added Suggests: genisoimage to python-pyisomd5sum (used by
    example/test script)
  * Converted package from dh_pycentral to dh_python2 (Closes: #616850)
  * Removed unneeded code triggering FTBFS in GCC 4.6 with -Werror
    (Closes: #625352)
  * Changed order of -lpopt linking causing FTBFS with recent binutils
    (LP: #771038)

 -- Ryan Finnie <ryan@finnie.org>  Fri, 06 May 2011 20:14:04 -0700

isomd5sum (1:1.0.5-1) unstable; urgency=low

  * New upstream version.
  * debian/rules: Include /usr/share/python/python.mk.
  * debian/rules: Use call py_sitename_sh macro to install all python 
    stuffs correctly.

 -- Ryan Finnie <ryan@finnie.org>  Thu, 21 Oct 2010 11:32:13 -0700

--- a/control
+++ b/control
@@ -1,19 +1,17 @@
 Source: isomd5sum
 Section: misc
 Priority: optional
-Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
-XSBC-Original-Maintainer: Ryan Finnie <ryan@finnie.org>
-Build-Depends: debhelper (>= 5.0.37.2), libpopt-dev, python-all-dev (>= 2.3.5-11), python-central
-Standards-Version: 3.7.3
+Maintainer: Ryan Finnie <ryan@finnie.org>
+Build-Depends: debhelper (>= 7), libpopt-dev, python-all-dev (>= 2.6.6-3~)
+Standards-Version: 3.9.2
 Homepage: http://fedorahosted.org/releases/i/s/isomd5sum
 Vcs-Browser: http://git.fedorahosted.org/git/isomd5sum.git
 Vcs-Git: git://git.fedorahosted.org/isomd5sum.git
-XS-Python-Version: all
 XS-Dm-Upload-Allowed: yes
 
 Package: isomd5sum
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: ISO9660 checksum utilities
  isomd5sum is a set of utilities for implanting a MD5 checksum in an 
  ISO (or any block device), then verifying the checksum later.  isomd5sum
@@ -26,9 +24,10 @@ Description: ISO9660 checksum utilities
 Package: python-pyisomd5sum
 Architecture: any
 Section: python
-Depends: ${shlibs:Depends}, ${python:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}
+Suggests: genisoimage
 Provides: ${python:Provides}
-XB-Python-Version: ${python:Versions}
+X-Python-Version: >= 2.4
 Description: ISO9660 checksum Python module
  isomd5sum is a set of utilities for implanting a MD5 checksum in an 
  ISO (or any block device), then verifying the checksum later.  isomd5sum
