Use debhelper 9, let it take care of hardening

--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Source: isomd5sum
 Section: misc
 Priority: optional
 Maintainer: Ryan Finnie <ryan@finnie.org>
-Build-Depends: debhelper (>= 7.0.50~), libpopt-dev, python-all-dev (>= 2.6.6-3~)
+Build-Depends: debhelper (>= 9), libpopt-dev, python-all-dev (>= 2.6.6-3~)
 Standards-Version: 3.9.3
 Homepage: http://fedorahosted.org/releases/i/s/isomd5sum
 Vcs-Browser: http://git.fedorahosted.org/git/isomd5sum.git
