Update Vcs location

--- a/control
+++ b/control
@@ -5,8 +5,8 @@ Maintainer: Ryan Finnie <ryan@finnie.org>
 Build-Depends: debhelper (>= 9), libpopt-dev, python-all-dev (>= 2.6.6-3~)
 Standards-Version: 3.9.4
 Homepage: http://fedorahosted.org/releases/i/s/isomd5sum
-Vcs-Browser: https://code.launchpad.net/~fo0bar/isomd5sum/isomd5sum-pkg-debian
-Vcs-Bzr: http://bazaar.launchpad.net/~fo0bar/isomd5sum/isomd5sum-pkg-debian
+Vcs-Browser: https://github.com/rfinnie/isomd5sum-pkg-debian
+Vcs-Git: https://github.com/rfinnie/isomd5sum-pkg-debian
 XS-Python-Version: all
 
 Package: isomd5sum
