Update Homepage/uscan to reflect upstream management via Github

--- a/control
+++ b/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Ryan Finnie <ryan@finnie.org>
 Build-Depends: debhelper (>= 9), libpopt-dev, python-all-dev (>= 2.6.6-3~)
 Standards-Version: 3.9.4
-Homepage: http://fedorahosted.org/releases/i/s/isomd5sum
+Homepage: https://github.com/rhinstaller/isomd5sum
 Vcs-Browser: https://github.com/rfinnie/isomd5sum-pkg-debian
 Vcs-Git: https://github.com/rfinnie/isomd5sum-pkg-debian
 XS-Python-Version: all
