New upstream release (add python3-pyisomd5sum)

--- a/rules
+++ b/rules
@@ -4,24 +4,25 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-include /usr/share/python/python.mk
+include /usr/share/python3/python.mk
 
 PYVERS=$(shell pyversions -r)
+PY3VERS=$(shell py3versions -r)
 
 %:
-	dh $@ --with=python2
+	dh $@ --with=python2,python3
 
 override_dh_auto_build:
 	$(MAKE) implantisomd5 checkisomd5
 	set -e; \
-	for python in $(PYVERS); do \
-		$(MAKE) \
+	for python in $(PYVERS) $(PY3VERS); do \
+		mkdir -p build/$$python; \
+		$(MAKE) -C build/$$python -f ../../Makefile VPATH=$(CURDIR) \
 		PYTHON=$$python pyisomd5sum.so; \
-		mv pyisomd5sum.so pyisomd5sum.so.$$python; \
 	done
 
 override_dh_auto_clean:
-	rm -f pyisomd5sum.so.python*
+	rm -rf build
 	$(MAKE) clean
 	dh_clean 
 
@@ -30,5 +31,9 @@ override_dh_auto_install:
 	set -e; \
 	for python in $(PYVERS); do \
 		install -m 0755 -d $(CURDIR)/debian/python-pyisomd5sum/usr/lib/$$python/$(call py_sitename_sh, $$python); \
-		install -m 0644 pyisomd5sum.so.$$python $(CURDIR)/debian/python-pyisomd5sum/usr/lib/$$python/$(call py_sitename_sh, $$python)/pyisomd5sum.so; \
+		install -m 0644 build/$$python/pyisomd5sum.so $(CURDIR)/debian/python-pyisomd5sum/usr/lib/$$python/$(call py_sitename_sh, $$python)/pyisomd5sum.so; \
+	done
+	for python in $(PY3VERS); do \
+		install -m 0755 -d $(CURDIR)/debian/python3-pyisomd5sum/usr/lib/$$python/$(call py_sitename_sh, $$python); \
+		install -m 0644 build/$$python/pyisomd5sum.so $(CURDIR)/debian/python3-pyisomd5sum/usr/lib/$$python/$(call py_sitename_sh, $$python)/pyisomd5sum.so; \
 	done
