isomd5sum (1:1.2.1-1) unstable; urgency=medium
  * New upstream release

 -- Ryan Finnie <ryan@finnie.org>  Sun, 06 Aug 2017 22:20:28 +0000

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/files
-/isomd5sum
-/python-pyisomd5sum
-/python3-pyisomd5sum
-/*.debhelper.log
-/*.substvars
+files
+isomd5sum
+python-pyisomd5sum
+python3-pyisomd5sum
+*.debhelper.log
+*.substvars
+.debhelper
