--- a/control
+++ b/control
@@ -5,8 +5,8 @@ Maintainer: Ryan Finnie <ryan@finnie.org>
 Build-Depends: debhelper (>= 9), libpopt-dev, python3-all-dev (>= 3.2.3-6~), dh-python, genisoimage
 Standards-Version: 4.4.0
 Homepage: https://github.com/rhinstaller/isomd5sum
-Vcs-Browser: https://github.com/rfinnie/isomd5sum-pkg-debian
-Vcs-Git: https://github.com/rfinnie/isomd5sum-pkg-debian
+Vcs-Browser: https://salsa.debian.org/rfinnie/isomd5sum-pkg-debian
+Vcs-Git: https://salsa.debian.org/rfinnie/isomd5sum-pkg-debian.git
 
 Package: isomd5sum
 Architecture: any
